# sogreen_wp72

./: README.md  environment.yml  pyproject.toml  requirements.txt
base/: parameters_osm_data_extraction.yml
conf/base/: catalog.yml
src/sogreen_wp72/: __init__.py  __main__.py  hooks.py  settings.py
src/sogreen_wp72/pipelines/osm_data_extraction/: __init__.py  nodes.py  pipeline.py
src/sogreen_wp72/pipelines/reporting/: nodes.py  pipeline.py
tests/pipelines/osm_data_extraction/: test_pipeline.py
